[Update] install button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div id="greeting">Hello World</div>
+    <button id="greet-button" type="button">クリック</button>
     <script src="./script.js"></script>
   </body>
 </html>
