--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="greeting">Hello World</div>
-    <button id="greet-button" type="button">クリック</button>
+    <button id="omikuji-button" type="button">おみくじを引く</button>
+    <div id="outcome">　</div>
+    <button id="timer-button" type="button">Timer </button>
+    <div id="timer-div"></div>
     <script src="./script.js"></script>
   </body>
 </html>
